<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="383dp"
        android:layout_height="118dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app"
        android:contentDescription="@string/app_name"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="251dp"
        android:layout_height="78dp"
        android:layout_marginTop="100dp"
        android:drawableLeft="@drawable/aaa"
        android:drawablePadding="5dp"
        android:text="@string/map"
        android:textSize="40sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button2"
        android:layout_width="251dp"
        android:layout_height="78dp"
        android:layout_marginTop="60dp"
        android:drawableLeft="@drawable/aab"
        android:drawablePadding="5dp"
        android:text="@string/scan"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button3"
        android:layout_width="251dp"
        android:layout_height="78dp"
        android:layout_marginTop="60dp"
        android:drawableLeft="@drawable/pts"
        android:text="@string/points"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="RtlHardcoded" />

    <ImageButton
        android:id="@+id/scan"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="144dp"
        android:src="@drawable/scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        android:contentDescription="@string/Scan"
        tools:ignore="VisualLintBounds" />

    <ImageButton
        android:id="@+id/setting"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="144dp"
        android:src="@drawable/set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        android:contentDescription="@string/setting"
        tools:ignore="VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>